@@ -1,0 +1,6 @@
+Non-null disc type
+Null disc type
+Non-null strand ref
+Null strand ref
+Non-null graph arc
+Null graph arc
